@@ -28,13 +28,11 @@ o (option) proactively prime root, stubs and trust anchors, feature.
   early failure, faster on first query, but more traffic.
 o On Windows use CryptGenRandom() to get random seed for arc4random.
 o library add convenience functions for A, AAAA, PTR, getaddrinfo, libresolve.
-o library add function to get signature data (or whole reply message).
 o library add function to validate input from app that is signed.
 o add dynamic-update requests (making a dynupd request) to libunbound api.
 o in an ipv6 connected only environment unbound cannot use outgoing IP6 
   to send to ip4to6 mapped hosts, need ip4to6map of NS and disable 
   V6ONLY socket option.
-o support multiple dns messages in a TCP query stream for the unbound server.
 o SIG(0) and TSIG.
 o support OPT record placement on recv anywhere in the additional section. 
 o add local-file: config with authority features.
@@ -46,7 +44,7 @@ o (option) for extended statistics. If enabled (not by default) collect print
 	bits(RD, CD, DO, EDNS-present, AD)query, (Secure, Bogus)reply.
 	perhaps also see which slow auth servers cause >1sec values.
 	stats-file possible with key: value or key=value lines in it.
-	stats on SIGUSR1.
+	stats on SIGUSR1. addup stats over threads.
 o overhaul outside-network servicedquery to merge with udpwait and tcpwait,
   to make timers in servicedquery independent of udpwait queues.
 o 0x20 fallback so it can be enabled without trouble.
