@@ -1,5 +1,7 @@
 16 April 2008: Wouter
 	- requirements doc, updated clean query returns.
+	- parseunbound.pl update from Kai Storbeck.
+	- sunos4 porting changes.
 
 15 April 2008: Wouter
 	- fixup default rc.d pidfile location to /usr/local/etc.
